<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.authActivities.LoginActivity">

    <TextView
        android:id="@+id/LoginActivityTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="40dp"
        android:text="@string/Login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/LoginActivityEmailTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="96dp"
        android:text="@string/LoginEmailTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/LoginActivityPasswordTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="80dp"
        android:text="@string/Loginps"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginActivityEmailTV" />

    <EditText
        android:id="@+id/LoginActivityEmailInput"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/SignUpEmailHint"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/LoginActivityEmailTV"
        app:layout_constraintTop_toBottomOf="@+id/LoginActivityTV"
        tools:hint="@string/hintLoginEmail" />

    <EditText
        android:id="@+id/LoginAcitivtyPasswordInput"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/LoginPassword"
        android:inputType="textPassword"
        app:layout_constraintStart_toEndOf="@+id/LoginActivityPasswordTV"
        app:layout_constraintTop_toBottomOf="@+id/LoginActivityEmailInput" />

    <Button
        android:id="@+id/LoginActivityBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="128dp"
        android:text="@string/Login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginAcitivtyPasswordInput" />
</androidx.constraintlayout.widget.ConstraintLayout>